%% Layer 1: Models Class Diagram
%% Mermaid format

classDiagram
    class LogRecord {
        +str record_id
        +Mapping~str, Any~ payload
        +str created_at_utc
        +str | None dispatched_at_utc
        +str | None adapter_key
        +to_projection() dict
        +matches(filters) bool
    }
    
    class LogEnvelope~TContent, TContext, TMeta~ {
        +TContent content
        +TContext context
        +TMeta metadata
        +str created_at_utc
    }
    
    class utc_now_iso {
        +__call__() str
    }
    
    class SchemaCatalog {
        +DEFAULT_CONTENT_SCHEMA_ID
        +ERROR_CONTENT_SCHEMA_ID
        +AUDIT_CONTENT_SCHEMA_ID
        +build_default_content_schema_catalog()
    }
    
    LogRecord ..> utc_now_iso : uses
    LogEnvelope ..> utc_now_iso : uses
